--- a/apps/site/src/css/custom.css
+++ b/apps/site/src/css/custom.css
@@ -4,6 +4,13 @@
  * work well for content-centric websites.
  */
 
+ @import '@rhino-ui/components/dist/css/utilities.css';
+ @import '@rhino-ui/components/dist/css/variables.css';
+ @import '@rhino-ui/components/dist/css/index.css';
+ @import '@rhino-ui/components/dist/css/fonts.css';
+
+ @import '@rhino-ui/components/dist/css/reset.css';
+
 /* You can override the default Infima variables here. */
 :root {
   --ifm-color-primary: #2e8555;
